traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:16: error: Unmatched closing brace '}' ignored here
       posFin = true;}
                     ^